--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,11 @@
   "extends": [
     "config:base"
   ],
-  "postUpdateOptions": [
-    "gomodTidy"
+  "packageRules": [
+    {
+      "matchManagers": ["gomod"],
+      "matchDepTypes": ["indirect"],
+      "enabled": true
+    }
   ]
 }
