Simplify the workflow

--- a/.github/workflows/cf-pages.yaml
+++ b/.github/workflows/cf-pages.yaml
@@ -31,7 +31,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm i -g postcss-cli autoprefixer @fullhuman/postcss-purgecss rtlcss
+        run: npm ci
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
