--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The starter theme template of [HB Framework](https://hb.hugomods.com).",
   "scripts": {
     "dev": "hugo server --gc --disableFastRender --enableGitInfo -D",
-    "prod": "hugo server --gc --disableFastRender --enableGitInfo --renderToDisk --minify -p 1314"
+    "prod": "hugo server --gc --disableFastRender --enableGitInfo --renderToDisk --minify -e production -p 1314"
   },
   "repository": {
     "type": "git",
