--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,8 @@
 description: The starter theme template of HB (Hugo Bootstrap) Framework.
 
 hb:
+  js_bundle_name: main # the JS bundle name.
+  css_bundle_name: main # the CSS bundle name.
   header:
     brand: HB # the brand name, leave it empty to use site's title.
     logo_bg: '#712cf9' # logo background color, used by logo with transparent background.
@@ -40,6 +42,8 @@ hb:
       repo: hbstack/theme
       branch: main
       # subpath: exampleSite
+  # gallery:
+  #   thumbnail_size: "x640"
 
 seo:
   favicons: # see https://hugomods.com/en/docs/seo/#favicons-module
