Add more parameters

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,6 +21,8 @@ hb:
       mastodon: razonyang
   blog:
     paginate: 12 # paginate.
+    # post_thumbnail: false # whether to show the thumbnails.
+    # post_date_format: ":date_long" # see https://gohugo.io/functions/dateformat/#datetime-formatting-layouts.
     home: # homepage settings.
       featured_posts: 5 # the number of the featured posts.
       main_sections: # leave it empty to include all regular pages.
