--- a/netlify.toml
+++ b/netlify.toml
@@ -17,15 +17,19 @@ GO_VERSION = "1.20"
     X-Frame-Options = "deny"
     X-XSS-Protection = "1; mode=block"
 
-# multilingual 404 pages.
 [[redirects]]
-  from = "/:lang/*"
-  to = "/:lang/404.html"
+  from = "/en/*"
+  to = "/en/404.html"
+  status = 404
+
+[[redirects]]
+  from = "/zh-hans/*"
+  to = "/zh-hans/404.html"
   status = 404
 
 # fallback 404 page.
 [[redirects]]
   from = "/*"
-  to = "/en/404.html" # Replace the "en" to your default language code.
-  # to = "/404.html" # Use this instead when a monolingual site or "defaultContentLanguageInSubdir" is disabled.
+  # to = "/404.html"
+  to = "/en/404.html" # use this instead if defaultContentLanguageInSubdir is enabled.
   status = 404
