--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hb-theme",
-  "description": "The starter theme template of [HB Framework](https://hb.hugomods.com).",
+  "description": "The starter theme template of [HB Framework](https://hbstack.dev/).",
   "scripts": {
     "dev": "hugo server --gc --disableFastRender --enableGitInfo -D",
     "prod": "hugo server --gc --disableFastRender --enableGitInfo --renderToDisk --minify -e production -p 1314"
