--- a/theme.toml
+++ b/theme.toml
@@ -3,7 +3,7 @@ license = "MIT"
 licenselink = "https://github.com/hbstack/theme/blob/main/LICENSE"
 description = "The starter theme template of HB (Hugo Bootstrap) Framework"
 homepage = "https://github.com/hbstack/theme"
-demosite = "https://hb-theme.hugomods.com/"
+demosite = "https://theme.hbstack.dev/"
 tags = [
     "archive",
     "blog",
@@ -19,5 +19,5 @@ tags = [
 ]
 features = ["search", "flexible", "modular"]
 [author]
-name = "Razon Yang"
-homepage = "https://razonyang.com"
+name = "HB Framework Authors"
+homepage = "https://hbstack.dev/"
