Append PWD into the security.funcs.getenv for Hugo versions less than v0.112.0

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -108,3 +108,11 @@ related:
     weight: 10
   threshold: 10 # for testing, increase it to suit your case.
   toLower: false
+
+security:
+  funcs:
+    getenv:
+      - ^HUGO
+      - CI$
+      - PWD
+
