Describe the sidebar module parameters

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,11 +18,11 @@ hb:
   blog:
     sidebar:
       posts:
-        recent_count: 5
-        featured_count: 5
+        recent_count: 5 # the number of recent posts.
+        featured_count: 5 # the number of featured posts.
       taxonomies:
-        count: true
-        limit: 10
+        count: true # whether to show the number of posts associated to the item.
+        limit: 10 # the maximum number of the item.
     paginate: 12 # paginate.
     # post_thumbnail: false # whether to show the thumbnails.
     # post_date_format: ":date_long" # see https://gohugo.io/functions/dateformat/#datetime-formatting-layouts.
