Change the hb.blog.post_thumbnail_placeholder as HB THEME

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,6 +24,7 @@ hb:
         count: true # whether to show the number of posts associated to the item.
         limit: 10 # the maximum number of the item.
     paginate: 12 # paginate.
+    post_thumbnail_placeholder: HB THEME # the text of thumbnail placeholder, default to site title.
     # post_thumbnail: false # whether to show the thumbnails.
     # post_date_format: ":date_long" # see https://gohugo.io/functions/dateformat/#datetime-formatting-layouts.
     home: # homepage settings.
