Add custom sidebar widget

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -85,3 +85,6 @@ hugopress:
         # see layouts/partials/hugopress/modules/hb-custom/hooks/body-end.html.
         body-end:
           cacheable: true
+        # see layouts/partials/hugopress/modules/hb-custom/hooks/hb-blog-sidebar.html.
+        hb-blog-sidebar:
+          cacheable: true
