--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,6 +19,15 @@ hb:
   blog:
     full_width: false # when true, the blog layout takes full width.
     sidebar:
+      profile:
+        # title: Profile title other than site title.
+        # description: Profile description other than site description.
+        company: COMPANY
+        location: Earth
+        socials:
+          github: hbstack
+          mastodon: https://techhub.social/@hbstack
+          rss: true
       posts:
         recent_count: 5 # the number of recent posts.
         featured_count: 5 # the number of featured posts.
