Document the title_sections* parameters

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -8,6 +8,10 @@ enableRobotsTXT: true
 timeout: 120s # images processing takes a long time, it's recommended to commit the resources folder for improve the build performance.
 enableEmoji: true
 
+title_sections: true # when false, remove the sections from the title.
+title_sections_depth: 0 # the depth of sections on the title.
+title_sections_depth_dir: end # when start, the depth is counting from the root sections.
+
 permalinks:
   blog: /blog/:year/:month/:title
 
