--- a/config/_default/menus.zh-hans.yaml
+++ b/config/_default/menus.zh-hans.yaml
@@ -9,10 +9,21 @@ main:
         vendor: font-awesome-solid
         name: headset
 
+  - name: 文档
+    identifier: support-docs
+    parent: support
+    url: https://hbstack.dev/
+    weight: 1
+    params:
+      icon:
+        vendor: bs
+        name: book
+      description: 使用文档。
+
   - name: GitHub
     parent: support
     url: https://github.com/hbstack
-    weight: 1
+    weight: 2
     params:
       icon:
         vendor: fab
@@ -22,7 +33,7 @@ main:
   - name: 讨论
     parent: support
     url: https://github.com/hbstack/discussions
-    weight: 2
+    weight: 3
     params:
       icon:
         vendor: font-awesome-regular
@@ -33,7 +44,7 @@ main:
   - name: Bug 反馈
     parent: support
     url: https://github.com/hbstack/issues/new
-    weight: 3
+    weight: 4
     params:
       icon:
         vendor: font-awesome-solid
@@ -44,37 +55,20 @@ main:
   - name: 功能提议
     parent: support
     url: https://github.com/hbstack/issues/new
-    weight: 4
+    weight: 5
     params:
       icon:
         vendor: font-awesome-regular
         name: lightbulb
         color: orange
       description: 建议新的或需要改进的功能。
-
-  - name: Sponsor
-    identifier: sponsor
+  
+  - name: Mastodon
     parent: support
-    weight: 10
+    url: https://techhub.social/@hbstack
+    weight: 6
     params:
-      divider: true
-
-  - name: PayPal
-    weight: 11
-    parent: support
-    url: https://paypal.me/razonyang
-    params:
-      description: 通过 PayPal 赞助我们。
       icon:
-        vendor: simple-icons
-        name: paypal
-
-  - name: Ko-fi
-    weight: 12
-    parent: support
-    url: https://ko-fi.com/razonyang
-    params:
-      description: 通过 Ko-fi 赞助我们。
-      icon:
-        vendor: simple-icons
-        name: kofi
+        vendor: simple
+        name: mastodon
+      description: 关注我们以获取最近消息。
