--- a/config/development/params.yaml
+++ b/config/development/params.yaml
@@ -8,3 +8,8 @@ pwa:
       strategy: network-first
     style:
       strategy: network-first
+
+hugopress:
+  modules:
+    pwa:
+      disable: true
