chore: fix typo

--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -9,7 +9,7 @@ main:
         vendor: font-awesome-solid
         name: headset
 
-  - name: Documentations
+  - name: Documentation
     parent: support
     url: https://hbstack.dev/
     weight: 1
