--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -18,7 +18,7 @@ main:
         vendor: bs
         name: book
         className: text-primary
-      description: The documentations.
+      description: The documentation.
 
   - name: GitHub
     parent: support
