fix Netlify URL

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@ curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSIO
 tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && rm dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
 export PATH=/opt/build/repo/dart-sass:$PATH && \
 npm ci && \
-hugo --minify
+hugo --minify -b $URL
 """
 publish = "public"
 
